# OrketUI

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  extension.yaml  package-lock.json  package.json  pyproject.toml
UI/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
UI/src/: main.tsx  styles.css
UI/src/api/: client.ts  queries.ts  types.ts
UI/src/app/: Providers.tsx  Routes.tsx
UI/src/components/: AppShell.tsx  JsonViewer.tsx  StatusPill.tsx  SurfaceMessage.tsx  WorkspaceChrome.tsx
UI/src/pages/: BoardPage.tsx  CardsPage.tsx  InspectorPage.tsx  PromptReforgerPage.tsx  RunsPage.tsx  SequencerPage.tsx
UI/src/state/: uiStore.ts
client/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
client/docs/: SkillsUIPlan.md  UI.md  UIPlan.md
client/src/: App.vue  main.ts
client/src/api/: cards.api.ts  client.ts  logs.api.ts  sandboxes.api.ts  sessions.api.ts  (+2 more)
docs/: roadmap.md
scripts/: run.ps1  run.sh
server/: package.json  tsconfig.json
server/src/: config.ts  index.ts
src/orket_ui_app/: __init__.py  host_client.py  server.py
src/orket_ui_extension/: __init__.py  workload.py
stitch-design/: orket_studio_prototype.html  orket_system_architect_prototype.html
stitch-design/board/: code.html
stitch-design/cards/: code.html
stitch-design/inspector/: code.html
stitch-design/orket-botanical/: DESIGN.md
stitch-design/prompt-reforger/: code.html
stitch-design/runs/: code.html
stitch-design/sequencer/: code.html
(+63 files in other folders)
