[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orket-ui-extension"
version = "0.1.0"
description = "External shell and BFF scaffold for the OrketUI extension."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["orket_ui_app*", "orket_ui_extension*"]
